cleaned up TogUtils and modified to use new OracleOutput